# anip

./: .dockerignore  .gitignore  CONTRIBUTING.md  GUIDE.md  LICENSE-CODE  LICENSE-SPEC  MANIFESTO.md  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci-cli.yml  ci-conformance.yml  ci-csharp.yml  ci-go.yml  ci-java.yml  ci-python.yml  ci-registry.yml  ci-studio.yml  ci-typescript.yml  ci-website.yml  publish-gtm-agent-desktop-macos.yml  publish-gtm-agent-desktop-windows.yml  publish-gtm-showcase-images.yml  publish-registry-docker.yml  publish-studio-desktop-macos.yml  publish-studio-desktop-windows.yml  publish-studio-docker.yml  release.yml
adapters/graphql-py/: Dockerfile  README.md  adapter.example.yaml  docker-compose.test.yaml  pyproject.toml  test-e2e.sh  test_adapter.py
adapters/graphql-py/anip_graphql_adapter/: __init__.py  config.py  invocation.py  server.py  translation.py
adapters/graphql-ts/: Dockerfile  README.md  adapter.example.yaml  docker-compose.test.yaml  package-lock.json  package.json  test-adapter.ts  test-e2e.sh
adapters/mcp-py/: README.md  bridge.example.yaml  test_bridge.py
adapters/mcp-ts/: README.md  package.json  test-bridge.ts
adapters/rest-py/: Dockerfile  README.md  adapter.example.yaml  docker-compose.test.yaml  pyproject.toml  test-e2e.sh  test_adapter.py
adapters/rest-ts/: Dockerfile  README.md  adapter.example.yaml  docker-compose.test.yaml  package-lock.json  package.json  test-adapter.ts  test-e2e.sh
archive/2026-04-25-retired-typescript-generator/: README.md
benchmarks/gtm-agent-comparison/: README.md
bridges/mcp/: README.md  bridge.example.yaml  pyproject.toml  test_bridge.py
bridges/mcp-ts/: package-lock.json  package.json  test-bridge.ts
bridges/mcp/anip_mcp_bridge/: __init__.py  config.py  discovery.py  invocation.py  translation.py
conformance/: conftest.py  pyproject.toml  test_audit.py  test_authority.py  test_binding.py  test_budget.py  test_checkpoints.py  test_composition_hints.py  test_control_requirements.py  test_cross_service.py  test_cross_service_hints.py  test_discovery.py  test_input_resolution.py  test_invoke.py  test_lineage.py  test_permissions.py  test_recovery_class.py  test_tokens.py
conformance/samples/: devops-service.json  finance-service.json  flight-service.json  v024_input_resolution_examples.json
contract-tests/: pyproject.toml
contract-tests/packs/: devops.json  finance.json  flight-service.json  travel.json
contract-tests/src/anip_contract_tests/: __init__.py  cli.py  report.py  runner.py
contract-tests/src/anip_contract_tests/checks/: __init__.py  check_result.py  classification.py  compensation.py  cost_presence.py  read_purity.py
contract-tests/src/anip_contract_tests/probes/: __init__.py  audit_probe.py  storage_probe.py
contract-tests/tests/: test_checks.py  test_probes.py
deploy/playground/: Dockerfile.showcase  docker-compose.yml  (+2 more)
docs/: deployment-guide.md  distribution.md  rationale.md  trust-levels-v0.3-proposal.md  trust-model-v0.2.md  trust-model.md
examples/anip/: .gitignore  Dockerfile  README.md  app.py  demo.py  graphql-adapter.yaml  pyproject.toml  rest-adapter.yaml
examples/anip/anip_flight_demo/: engine.py  main.py  oidc.py
examples/anip/anip_flight_demo/capabilities/: book_flight.py  search_flights.py
examples/anip/anip_flight_demo/data/: database.py
examples/anip/anip_flight_demo/domain/: flights.py
examples/anip/anip_flight_demo/primitives/: checkpoint.py  merkle.py  models.py  permissions.py  sinks.py
examples/anip/anip_server/: main.py
examples/anip/anip_server/capabilities/: book_flight.py  search_flights.py
examples/anip/anip_server/data/: database.py  flights.py
examples/anip/anip_server/primitives/: checkpoint.py  crypto.py  delegation.py  manifest.py  models.py  permissions.py  sinks.py
examples/anip/tests/: conftest.py  test_audit_schema.py  test_audit_signing.py  test_checkpoints.py  test_conformance.py  test_crypto.py  test_discovery.py  test_flight_service.py  test_jwks.py  test_manifest_signing.py  test_merkle.py  test_oidc.py  test_sinks.py  test_token_issuance.py  test_token_verification.py  test_trust_mode.py
examples/showcase/gtm/custom-code-bundles/gtm_pipeline_python_native/: pyproject.toml
examples/showcase/gtm/custom-code-bundles/gtm_pipeline_python_native/src/gtm_pipeline_q2_review/: app.py  policy.py
examples/showcase/gtm/custom-code-bundles/gtm_pipeline_python_native/src/gtm_pipeline_q2_review/runtime/: approval_store.py
registry/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
schema/: README.md  anip.schema.json  discovery.schema.json  generate.py
scripts/: audit-release-artifacts.py
skills/: anip-consumer.md  anip-contract-drafter.md  anip-implementer.md  anip-validator.md
studio/: .dockerignore  Dockerfile  Dockerfile.standalone  README.md  docker-compose.yml  index.html  nginx-standalone.conf  nginx.conf  package-lock.json  package.json  sync.sh  tsconfig.app.json  vite.config.ts
studio/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: lib.rs  main.rs
tooling/: NEXT_STEPS_PLAN.md  PROCESS.md  README.md  SCHEMA_EVOLUTION_V2.md  UI_AND_AUTOMATION_FLOW.md  VALIDATION_GATE.md  VALIDATION_REPORT_TEMPLATE.md
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+1506 files in other folders)
