[project]
name = "anip-conformance"
version = "0.15.0"
description = "ANIP protocol conformance test suite"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
