[project]
name = "anip-demo"
version = "0.1.0"
description = "ANIP reference implementation — flight booking service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
anip-server = "anip_server.main:run"
anip-demo = "demo:main"
