[project]
name = "anip-flight-demo"
version = "0.1.0"
description = "ANIP reference implementation — flight booking service"
requires-python = ">=3.11"
dependencies = [
    "anip-service @ file:../../packages/python/anip-service",
    "anip-fastapi @ file:../../packages/python/anip-fastapi",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[project.scripts]
anip-server = "anip_flight_demo.main:run"
