[package]
name = "anip-studio-desktop"
version = "0.24.7"
description = "ANIP Studio desktop shell"
authors = ["ANIP Protocol <team@anip.dev>"]
edition = "2021"

[lib]
name = "anip_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
