[project]
name = "gtm-operator-contract-20260512235040"
version = "0.1.0"
description = "Generated ANIP Python host with self-contained GTM native implementation"
requires-python = ">=3.11"
dependencies = [
    "anip-core==0.24.4",
    "anip-service==0.24.4",
    "anip-fastapi==0.24.4",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gtm_operator_contract_20260512235040*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
